[gd_scene load_steps=35 format=3 uid="uid://ddc86ootpum2i"]

[ext_resource type="Script" uid="uid://b3p1vdjalivy8" path="res://scenes/bosses/warlord_turtle/warlord_turtle.gd" id="1_h88eo"]
[ext_resource type="Texture2D" uid="uid://bkw13ll6bqded" path="res://assets/sprites/war_lord/war_lord_turtle20.png" id="1_i3h6d"]
[ext_resource type="Texture2D" uid="uid://cpjxo1qb1klg" path="res://assets/sprites/war_lord/war_lord_turtle19.png" id="2_lkjua"]
[ext_resource type="Texture2D" uid="uid://i773fh1bdmua" path="res://assets/sprites/war_lord/war_lord_turtle1.png" id="3_kebsc"]
[ext_resource type="Texture2D" uid="uid://cy84hetg5u1wp" path="res://assets/sprites/war_lord/war_lord_turtle2.png" id="4_caw7y"]
[ext_resource type="Texture2D" uid="uid://bbaye0wuejhkl" path="res://assets/sprites/war_lord/war_lord_turtle3.png" id="5_h88eo"]
[ext_resource type="Texture2D" uid="uid://cwpy4befsryn4" path="res://assets/sprites/war_lord/war_lord_turtle4.png" id="6_5qai5"]
[ext_resource type="Texture2D" uid="uid://fgffjr54dbue" path="res://assets/sprites/war_lord/war_lord_turtle5.png" id="7_3np7b"]
[ext_resource type="Texture2D" uid="uid://bsbpqvebd7xwx" path="res://assets/sprites/war_lord/war_lord_turtle6.png" id="8_usy7q"]
[ext_resource type="Texture2D" uid="uid://ruxhe2ccf8w" path="res://assets/sprites/war_lord/war_lord_turtle10.png" id="9_qqnv7"]
[ext_resource type="Texture2D" uid="uid://be1hu7s30b53v" path="res://assets/sprites/war_lord/war_lord_turtle11.png" id="10_lp76f"]
[ext_resource type="Texture2D" uid="uid://jnrk4idobw8o" path="res://assets/sprites/war_lord/war_lord_turtle12.png" id="11_l3s45"]
[ext_resource type="Texture2D" uid="uid://gqwq8kcibgmu" path="res://assets/sprites/war_lord/war_lord_turtle13.png" id="12_1jeh6"]
[ext_resource type="Texture2D" uid="uid://dvgkfqo3r1fsh" path="res://assets/sprites/war_lord/war_lord_turtle14.png" id="13_jqwig"]
[ext_resource type="Texture2D" uid="uid://btg2d3dm5ndxt" path="res://assets/sprites/war_lord/war_lord_turtle15.png" id="14_1b8g7"]
[ext_resource type="Texture2D" uid="uid://cfuxqbfl7lue7" path="res://assets/sprites/war_lord/war_lord_turtle16.png" id="15_47ih4"]
[ext_resource type="Texture2D" uid="uid://c4qqvxm26ls8v" path="res://assets/sprites/war_lord/war_lord_turtle17.png" id="16_44inj"]
[ext_resource type="Texture2D" uid="uid://bvjrbawfqvu7g" path="res://assets/sprites/war_lord/war_lord_turtle7.png" id="17_snu50"]
[ext_resource type="Texture2D" uid="uid://1610ljowj14y" path="res://assets/sprites/war_lord/war_lord_turtle8.png" id="18_leogq"]
[ext_resource type="Texture2D" uid="uid://dfacy0toeepoo" path="res://assets/sprites/war_lord/war_lord_turtle9.png" id="19_uc8af"]
[ext_resource type="Script" uid="uid://8dts8kr8c5wk" path="res://scenes/bosses/king_crab/hit_area_2d.gd" id="20_upy5t"]
[ext_resource type="Script" uid="uid://csu2b21cwchqw" path="res://scripts/hurt_area_2d.gd" id="21_dhjra"]
[ext_resource type="Script" uid="uid://dva73oliuh5wk" path="res://scripts/node2d_factory.gd" id="22_5qai5"]
[ext_resource type="PackedScene" uid="uid://cllda15ck0g1a" path="res://scenes/bosses/warlord_turtle/bomb.tscn" id="24_jm27j"]
[ext_resource type="Script" uid="uid://cnjbeusghyxky" path="res://scenes/bosses/king_crab/normal.gd" id="25_l3s45"]
[ext_resource type="Script" uid="uid://ktn17dsm05pr" path="res://scenes/bosses/warlord_turtle/drop_bomb.gd" id="26_1jeh6"]
[ext_resource type="Script" uid="uid://cilgq4clhxc8f" path="res://scenes/bosses/king_crab/hurt.gd" id="27_jqwig"]
[ext_resource type="Script" uid="uid://cin74if78xv74" path="res://scenes/bosses/king_crab/dead.gd" id="28_1b8g7"]
[ext_resource type="Script" uid="uid://jnneh3ib56xb" path="res://scenes/bosses/warlord_turtle/launch_rocket.gd" id="29_47ih4"]
[ext_resource type="Script" uid="uid://blu6d5265qqgw" path="res://scenes/bosses/warlord_turtle/stun.gd" id="30_44inj"]
[ext_resource type="PackedScene" uid="uid://dqrfrb8e5g4kh" path="res://scenes/bosses/warlord_turtle/rocket.tscn" id="32_evixd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_b7cjc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_i3h6d")
}, {
"duration": 1.0,
"texture": ExtResource("2_lkjua")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kebsc")
}, {
"duration": 1.0,
"texture": ExtResource("4_caw7y")
}, {
"duration": 1.0,
"texture": ExtResource("5_h88eo")
}, {
"duration": 1.0,
"texture": ExtResource("6_5qai5")
}, {
"duration": 1.0,
"texture": ExtResource("7_3np7b")
}, {
"duration": 1.0,
"texture": ExtResource("8_usy7q")
}],
"loop": false,
"name": &"drop_bomb",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lkjua")
}, {
"duration": 1.0,
"texture": ExtResource("1_i3h6d")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_qqnv7")
}, {
"duration": 1.0,
"texture": ExtResource("10_lp76f")
}, {
"duration": 1.0,
"texture": ExtResource("11_l3s45")
}, {
"duration": 1.0,
"texture": ExtResource("12_1jeh6")
}, {
"duration": 1.0,
"texture": ExtResource("13_jqwig")
}, {
"duration": 1.0,
"texture": ExtResource("14_1b8g7")
}, {
"duration": 1.0,
"texture": ExtResource("15_47ih4")
}, {
"duration": 1.0,
"texture": ExtResource("16_44inj")
}],
"loop": false,
"name": &"launch_rocket",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_usy7q")
}, {
"duration": 1.0,
"texture": ExtResource("17_snu50")
}, {
"duration": 1.0,
"texture": ExtResource("18_leogq")
}, {
"duration": 1.0,
"texture": ExtResource("19_uc8af")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_usy7q")
}, {
"duration": 1.0,
"texture": ExtResource("17_snu50")
}, {
"duration": 1.0,
"texture": ExtResource("18_leogq")
}, {
"duration": 1.0,
"texture": ExtResource("19_uc8af")
}],
"loop": true,
"name": &"stun",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evixd"]
size = Vector2(62, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yvna"]
size = Vector2(42, 62)

[node name="WarlordTurtle" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_h88eo")

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
sprite_frames = SubResource("SpriteFrames_b7cjc")
animation = &"dead"
flip_h = true

[node name="HitArea2D" type="Area2D" parent="Direction"]
collision_layer = 2
collision_mask = 4
script = ExtResource("20_upy5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D"]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_evixd")

[node name="LeftFactory" type="Marker2D" parent="Direction"]
position = Vector2(1, -23)
script = ExtResource("22_5qai5")
product_packed_scene = ExtResource("24_jm27j")
target_container_name = &"Bullets"

[node name="RightFactory" type="Marker2D" parent="Direction"]
position = Vector2(31, -16)
script = ExtResource("22_5qai5")
product_packed_scene = ExtResource("24_jm27j")
target_container_name = &"Bullets"

[node name="HurtArea2D" type="Area2D" parent="Direction"]
collision_layer = 16
collision_mask = 8
script = ExtResource("21_dhjra")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtArea2D"]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_evixd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_8yvna")

[node name="States" type="Node" parent="."]

[node name="Normal" type="Node" parent="States"]
script = ExtResource("25_l3s45")

[node name="DropBomb" type="Node" parent="States"]
script = ExtResource("26_1jeh6")

[node name="Hurt" type="Node" parent="States"]
script = ExtResource("27_jqwig")

[node name="Dead" type="Node" parent="States"]
script = ExtResource("28_1b8g7")

[node name="LaunchRocket" type="Node" parent="States"]
script = ExtResource("29_47ih4")

[node name="Stun" type="Node" parent="States"]
script = ExtResource("30_44inj")

[node name="DropTimer" type="Timer" parent="."]

[node name="RocketPositions" type="Node2D" parent="."]

[node name="RocketFactory1" type="Marker2D" parent="RocketPositions"]
position = Vector2(150, 25)
script = ExtResource("22_5qai5")
product_packed_scene = ExtResource("32_evixd")
target_container_name = &"Bullets"

[node name="RocketFactory2" type="Marker2D" parent="RocketPositions"]
position = Vector2(75, 25)
script = ExtResource("22_5qai5")
product_packed_scene = ExtResource("32_evixd")
target_container_name = &"Bullets"

[node name="RocketFactory3" type="Marker2D" parent="RocketPositions"]
position = Vector2(-75, 25)
script = ExtResource("22_5qai5")
product_packed_scene = ExtResource("32_evixd")
target_container_name = &"Bullets"

[node name="RocketFactory4" type="Marker2D" parent="RocketPositions"]
position = Vector2(-150, 25)
script = ExtResource("22_5qai5")
product_packed_scene = ExtResource("32_evixd")
target_container_name = &"Bullets"

[connection signal="hitted" from="Direction/HitArea2D" to="Direction/HitArea2D" method="_on_hitted"]
[connection signal="hurt" from="Direction/HurtArea2D" to="Direction/HurtArea2D" method="_on_hurt"]
